Fix submit button gap...

--- a/assembl/static2/css/components/richTextEditor.scss
+++ b/assembl/static2/css/components/richTextEditor.scss
@@ -30,7 +30,7 @@
 
 .rich-text-editor.hidePlaceholder {
   .public-DraftEditor-content {
-    min-height: 13.4em;
+    min-height: 13.5em;
   }
   .public-DraftEditorPlaceholder-inner {
     display: none;
